--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,11 +48,12 @@ if(BUILD_TESTS)
 endif(BUILD_TESTS)
 
 # NCC patch size (must be odd integer, typical values: 3, 5, 7)
-ADD_DEFINITIONS(-DRMD_CORR_PATCH_SIDE=5)
+ADD_DEFINITIONS(-DRMD_CORR_PATCH_SIDE=7)
 # Maximum extent of epipolar line search in pixels
 ADD_DEFINITIONS(-DRMD_MAX_EXTENT_EPIPOLAR_SEARCH=100)
 
-find_package(OpenCV REQUIRED)
+find_package(OpenCV COMPONENTS viz REQUIRED
+             HINTS /home/anurag/kinfu_ws/devel/)
 find_package(Eigen REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system filesystem)
 
